--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
-.env
-.auth.ccg.db
+# Python-generated files
+__pycache__/
+*.py[oc]
+build/
+dist/
+wheels/
+*.egg-info
+
+# Virtual environments
+.venv
+
+# Secrets
+.env*
+.auth.*
+
+# Garbage
+.DS_Store
+error.log
