--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-# Python-generated files
+# Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[oc]
+*.py[cod]
+*$py.class
+
 build/
 dist/
 wheels/
